# ft_ls

./: CMakeLists.txt  Makefile  ft_ls
includes/: ft_ls.h
libft_printf/: Makefile
libft_printf/includes/: ft_printf.h
libft_printf/libft/: Makefile
libft_printf/libft/includes/: libft.h
libft_printf/libft/src/: ft_lstswap.c  ft_strchr_index.c
src/: display.c  file.c  length.c  main.c  parse.c  print.c  print_files.c  print_items.c  row_col.c  sort.c
